--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <p class="odd-number">Number 1 - I'm a class!</p>
-    <div id="fourth-element">Number 2 - I'm one ID.</div>
+    <div id="second-element">Number 2 - I'm one ID.</div>
     <p class="odd-number" id="third-element">Number 3 - I'm a class, but cooler!</p>
     <div id="fourth-element">Number 4 - I'm another ID.</div>
     <p class="odd-number">Number 5 - I'm a class!</p>
